# php-imageboard-apps

./: README.md
1/1/: README.md
12/: README.md
18/35-main/adeliaRS/up/: Cargo.toml  db.sql  install.sh
18/35-main/adeliaRS/up/notes/: clear.txt  mariadbinstall.txt
18/35-main/adeliaRS/up/src/: board.rs  main.rs
18/35-main/adeliaRS/up/static/: style.css
23/: README.md
24/43-main/: index.html  post.php
25/44-main/: index.html  post.php  style.css
26/45-main/: index.html  post.php
27/000/: settings.php
28/: README.md  index.php  style.css
29/: README.md
29/000/: imgboard.php
29/000/inc/: html.php
29/42-main/42-main/: gorillas1.html
30/: README.md
35/: README.md
35/Version1/: admin.php  chess_template.php  config.php  functions.php  install.php  recent.php  reply_template.php
35/Version1/css/: style.css
35/Version2/: admin.php  all.bat  chess_template.php  config.php  functions.php  install.php  recent.php  reply_template.php
37/: index.php  style.css
38/: captcha_png.php  index.php  style.css
39/: README.md
39/1/: post.php
39/2/: post.php
39/2/css/: burichan.css  futaba.css
39/2/js/: switchStylesheet.js
39/3/: post.php
39/3/css/: dark.css  grey.css  light.css
39/4/: post.php
39/4/js/: switchStylesheet.js
39/5/: post.php
39/5/css/: dark.css
39/6/: common.php  post.php  reply.php
39/6/css/: grey.css
39/6/js/: toggleimage.js
39/7/: common.php  post.php  reply.php
39/7/css/: light.css
40/: Cargo.toml
40/src/: main.rs
5/2/: README.md
