[package]
name = "simple_imageboard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.4"
futures-util = "0.3"
sanitize-filename = "0.5"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
