[package]
name = "chess_board"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.0"
actix-files = "0.6.6"
actix-multipart = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
image = "0.24.6"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
html-escape = "0.2"
mime_guess = "2.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15"
cookie = "0.16.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
